--- a/gb/22/9/14/n13824730.md
+++ b/gb/22/9/14/n13824730.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>郑运鹏提催速政策三档：国旅好客北横大进化</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/09/id13824731-575002-600x400.jpg" />
 <h6>桃园观光三倍速！郑运鹏提催速政策三档：国旅、好客、北横大进化。（民进党桃园市长参选人郑运鹏服务团队提供）
 </h6>
 <hr>
-<p>【大纪元2022年09月14日讯】（大纪元记者徐乃义台湾桃园报导）民进党桃园市长参选人<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%83%91%E8%BF%90%E9%B9%8F.md#1">郑运鹏</a>，14日前往龙潭区手信雾隐城参访，活动中体验日式点心DIY，更发表了“桃园<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%A7%82%E5%85%89.md#1">观光</a>三倍速”的政策三档，包括<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%9B%BD%E6%97%85.md#1">国旅</a>大进化、<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A5%BD%E5%AE%A2.md#1">好客</a>大进化、北横大进化，期盼推动桃园<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%A7%82%E5%85%89.md#1">观光</a>发展三倍速！</p>
-<figure id="attachment_13824733" aria-describedby="caption-attachment-13824733" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/09/id13824733-575004.jpg"><img class="size-large wp-image-13824733" src="https://i.epochtimes.com/assets/uploads/2022/09/id13824733-575004-600x399.jpg" alt="" width="600" b="399" /></a><figcaption id="caption-attachment-13824733" class="wp-caption-text">桃园观光三倍速！<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%83%91%E8%BF%90%E9%B9%8F.md#1">郑运鹏</a>提催速政策三档：<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%9B%BD%E6%97%85.md#1">国旅</a>、<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A5%BD%E5%AE%A2.md#1">好客</a>、北横大进化。（民进党桃园市长参选人郑运鹏服务团队提供）</figcaption></figure>
+<p>【大纪元2022年09月14日讯】（大纪元记者徐乃义台湾桃园报导）民进党桃园市长参选人郑运鹏，14日前往龙潭区手信雾隐城参访，活动中体验日式点心DIY，更发表了“桃园观光三倍速”的政策三档，包括国旅大进化、好客大进化、北横大进化，期盼推动桃园观光发展三倍速！</p>
+<figure id="attachment_13824733" aria-describedby="caption-attachment-13824733" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/09/id13824733-575004.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-13824733" src="https://i.epochtimes.com/assets/uploads/2022/09/id13824733-575004-600x399.jpg" alt="" width="600" b="399" /></a><figcaption id="caption-attachment-13824733" class="wp-caption-text">桃园观光三倍速！郑运鹏提催速政策三档：国旅、好客、北横大进化。（民进党桃园市长参选人郑运鹏服务团队提供）</figcaption></figure>
 <p>郑运鹏指出，手信雾隐城是规划相当完整的观光工厂，内部装潢浓浓地日本风，让人仿佛置身在日本般，可短暂一解无法出国之苦，而今日也有体验日式点心DIY活动。他更笑说，随着季节不同，未来考试季说不定可以来做《哆啦Ａ梦》中的记忆吐司，让考生都能过目不忘，和郑文灿一样记忆过人。</p>
-<figure id="attachment_13824732" aria-describedby="caption-attachment-13824732" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/09/id13824732-575003.jpg"><img class="size-large wp-image-13824732" src="https://i.epochtimes.com/assets/uploads/2022/09/id13824732-575003-600x399.jpg" alt="" width="600" b="399" /></a><figcaption id="caption-attachment-13824732" class="wp-caption-text">桃园观光三倍速！郑运鹏提催速政策三档：国旅、好客、北横大进化。（民进党桃园市长参选人郑运鹏服务团队提供）</figcaption></figure>
+<figure id="attachment_13824732" aria-describedby="caption-attachment-13824732" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/09/id13824732-575003.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-13824732" src="https://i.epochtimes.com/assets/uploads/2022/09/id13824732-575003-600x399.jpg" alt="" width="600" b="399" /></a><figcaption id="caption-attachment-13824732" class="wp-caption-text">桃园观光三倍速！郑运鹏提催速政策三档：国旅、好客、北横大进化。（民进党桃园市长参选人郑运鹏服务团队提供）</figcaption></figure>
 <p>郑运鹏提到，他在龙潭就参访了乌树林工业区、龙潭市政说明会、龙潭农会，龙潭的各行各业，不管是工业、文创、农业、建设都相当丰富，让人觉得龙潭就包山包海，深不可测，未来会继续努力，让龙潭可以持续发光发热，以身龙潭人为荣。</p>
 <p>郑运鹏参访时提出“桃园观光三倍速”的观光政策，第一档：“国旅大进化”，包含“国旅抢客大进化”、“职人创生大进化”以及“移工休闲大进化”。他说，未来若开放边境后，国内观光势必会受到冲击，因此，应该要思考如何将观光留在桃园娱乐，并定额补贴国旅，规模随时调整。</p>
 <p>同时希望媒合地方创生、青创团队及网路旅游业者等，来开发桃园职人体验深度旅游路线。再者，透过媒合移工大厂及旅游业参访桃园各大景点。希望整合推广桃园观光工厂、景点、餐厅、运动赛事，成为套装一日或两日行程。</p>
@@ -17,52 +17,42 @@
 <p>郑运鹏桃园三倍速的第三档：“北横大进化”，希望争取划设“北横国家风景区”，打造北桃宜国家级观光风景区，并进一步改善环境交通、步道整修及维护等，让北横环境大进化。</p>
 <p>郑运鹏说，14日是正式提名以来第28天，他就已提出25项政见，每一项政策都有很完整的方向，用一场正面跟政策的选举竞争，让市民来选择。近日民调趋势都是往好的地方呈现，也意味着整体选举节奏与规划都是正确的方向，他会持续努力，他也有信心能赢得胜利。◇</p>
 <p>责任编辑：黄善</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/4/29/n13723159.md#1">2022头份四月八 靓灯好客节</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/13/n13801733.md#1">萧美琴：台湾人好客精神不该遭中共打压</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/4/n13817240.md#1">悠游国旅补助民众使用热烈 估已创逾200亿效益</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/8/n13819446.md#1">推广低碳永续观光 小琉球首办“放空日”市集</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/8/n13820159.md#1">台争取疫后韩国旅客 韩星金宰佑担任观光代言人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/11/n13822381.md#1">郑运鹏微幅领先继续努力 张善政自有选举步骤</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/12/n13823095.md#1">日本小镇观光火车 以拉面的汤作为燃料</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/13/n13823853.md#1">郑运鹏推“长者四季春”顾长辈 桃园乐活共老</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962451.md#1">“如果我是一面镜子”邀亲子来一探究“镜”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962213.md#1">纾缓照顾者负担 联新好棒社区长照机构开幕</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/4/29/n13723159.md#1">2022头份四月八 靓灯好客节</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/13/n13801733.md#1">萧美琴：台湾人好客精神不该遭中共打压</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/4/n13817240.md#1">悠游国旅补助民众使用热烈 估已创逾200亿效益</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/8/n13819446.md#1">推广低碳永续观光 小琉球首办“放空日”市集</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/8/n13820159.md#1">台争取疫后韩国旅客 韩星金宰佑担任观光代言人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/11/n13822381.md#1">郑运鹏微幅领先继续努力 张善政自有选举步骤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/12/n13823095.md#1">日本小镇观光火车 以拉面的汤作为燃料</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/13/n13823853.md#1">郑运鹏推“长者四季春”顾长辈 桃园乐活共老</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308020.md#1">电动车的抢救演练 防火毯跟防汛挡板抢救</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307972.md#1">桃园2024年东方美人茶评鉴颁奖 辅导茶农智慧农耕</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/15/n10219359.md#1" target="_blank">中共淫乱的前生今世（2）江氏“新时代”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/16/n10855894.md#1" target="_blank">绝处逢生 韩国男子见证两个奇迹</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/30/n9910984.md#1" target="_blank">文革中自杀的名人（1）人民日报总编邓拓</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/14/11/8/n4291474.md#1" target="_blank">明慧网编辑与一名大陆“610”人员的对话</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957926.md#1">【未解之谜】科学证明 轮回真的存在？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13956715.md#1">鬼使迎接 谁人来当阎罗王？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954436.md#1">天公微意妙难量 许大年诚心改过福绵绵</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/17/n13952483.md#1">【古道人生】捕风捉影无事生非而造成三人死亡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962135.md#1">【财商天下】中国汽车抢占俄市场 俄罗斯人很无奈</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/29/n13961276.md#1">【时事军事】大反攻面前 普京内心怂了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961578.md#1">【晚间新闻】多国惊现大角星变异株 传播飞快</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/29/n13961152.md#1">专家：习近平正为战争做准备 世界应认真对待</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/29/n13960989.md#1">微信和QQ凌晨崩了 网民：该崩溃的是我</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/29/n13960977.md#1">辽宁男驾车到无人陵园 雷达显示全是“人”影</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960536.md#1">刘涛持股公司注销 直播账号停更 网友热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/29/n13961317.md#1">遭大陆主持人强拉外套 王心凌吓得脸色大变</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/29/n13961287.md#1">43岁沈腾疑出国求医 近照脖子粗大引猜测</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960514.md#1">夺全球专辑销量冠军 周杰伦回应昆凌骄傲又逗趣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/29/n13960795.md#1">中国漫画家因冒犯政府被捕  历劫后用画笔发声</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/27/n13959381.md#1">有一种运动可能对健康有害</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954466.md#1">这种糖吃多让人变痴呆 专家析原因</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960218.md#1">衣服应该多久洗一次？ 看看专家怎么说</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/29/n13961000.md#1">无法边走路边讲话？哈佛研究：或为痴呆症前兆</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13949783.md#1">“太闲”竟然也会导致自律神经失调？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/22/n14296328.md#1">青春走一回  儿子，谢谢你教会我这一课！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/26/n14299288.md#1">【未解之谜】多个预言印证? 2025年有巨变 日台要小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/22/n14296470.md#1">【未解之谜】数千年来无人敢登顶 西藏神山冈仁波齐峰之谜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279168.md#1">【历史的瞬间】贝隆夫人──她的谎言与美丽，让阿根廷哭泣</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/20/n14294567.md#1">神秘奇观：雷震飞石 奇异预兆应验</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/26/n14299362.md#1">【晚间新闻】巴黎奥运塞纳河开幕 安保规模空前</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/26/n14299360.md#1">【全球新闻】巴黎奥运惊魂 高铁遇袭瘫痪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/26/n14299352.md#1">【中国禁闻】贿赂美官员迫害法轮功 两侨领认罪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/25/n14298566.md#1">报告：中共利用军演盗窃西方先进战机技术</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/25/n14298583.md#1">游客过多 日本餐厅想出一招来应对</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/25/n14298682.md#1">大陆一电动汽车自燃 厂家员工到场先撬车标</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/24/n14297939.md#1">传胡歌获90后妻子陪伴 黄曦宁穿着朴素低调</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/25/n14298693.md#1">赵丽颖带5岁儿子与父母聚餐 画面温馨</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/26/n14299514.md#1">席琳·迪翁巴黎奥运开幕式献唱《爱的赞歌》</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/25/n14298646.md#1">贝克汉姆夫妇结婚25周年 两人户外恩爱照曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/25/n14298560.md#1">王兵执导新片入围威尼斯 疑踩红线遭陆网封杀</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/23/n14296813.md#1">超级食物酪梨怎么切 简单4步骤学起来</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/24/n14297898.md#1">这蔬菜让人百吃不厌 专家说多多益善</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/22/n14296131.md#1">大型研究：每日服复合维生素增加死亡风险</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/25/n14298289.md#1">为何太空人在太空中避免吃这5种食物？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/16/n14292077.md#1">牙龈红肿出血又松动？两招自救</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/9/14/n13824730.htm">郑运鹏提催速政策三档：国旅好客北横大进化</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/22/9/14/n13824730.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/9/14/n13824730.htm">郑运鹏提催速政策三档：国旅好客北横大进化</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/22/9/14/n13824730.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
